# software-card-policies

./: .buildinfo  .gitignore  NOTES.html  NOTES.md  README.md  SPECIFICATION.md  config.toml  data.ttl  genindex.html  index.html  objects.inv  pre-commit.sh  pyproject.toml  search.html  searchindex.js
.github/workflows/: documentation.yml
_sources/: NOTES.md  index.rst.txt
_sources/appendices/: ontology.md  quick-reference.md
_sources/example-policies/: index.rst
_sources/reference-implementation/: library.rst  overview.md  validator.rst
_sources/specification/: configuration.md  conventions.md  creation.md  examples.md  introduction.md  parameterization.md  validation.md
appendices/: ontology.html  quick-reference.html  shacl-introduction.html
docs/: conf.py  index.rst
docs/_ext/: copy_files.py
docs/appendices/: ontology.md  shacl-introduction.md
docs/example-policies/: index.rst
docs/reference-implementation/: library.rst  overview.md  validator.rst
docs/specification/: considerations.md  conventions.md  index.rst  introduction.md  validation.md
example-policies/: index.html
example-policies/components/: orcid.js  orcid.ttl
example-policies/data/: hermes.ttl
example-policies/policies/: _collection.ttl  authors-affiliation.ttl  authors.ttl  description-parameterizable.ttl  helmholtz-codebase.ttl  license.ttl  licenses-parameterizable.ttl  semantic-versioning.ttl
examples/components/: orcid.ttl
examples/data/: hermes.ttl
examples/policies/: _collection.ttl  authors.ttl  description-parameterizable.ttl  description-parametrizable.ttl  helmholtz-codebase.ttl  license.ttl  licenses-parameterizable.ttl  semantic-versioning.ttl
reference-implementation/: library.html  overview.html  validator.html
specification/: configuration.html  considerations.html  conventions.html  creation.html  examples.html  index.html  introduction.html  parameterization.html  validation.html
src/sc_validate/: __init__.py  __main__.py  config.py  data_model.py  namespaces.py  rdf.py  report.py
src/sc_validate/policies/: licenses.ttl
src/sc_validate/templates/: report.j2
src/shacl_integration_test/: __main__.py  config.py  rdf.py
src/shacl_integration_test/policies/: authors.ttl  description.ttl  licenses.ttl
src/software_card_policies/: __init__.py  __main__.py  config.py  data_model.py  namespaces.py  rdf_helpers.py  report.py
validator/: index.html
