# SPDX-FileCopyrightText: 2024 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: David Pape

[build-system]
requires = ["setuptools >= 64", "setuptools-scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-validate"
dynamic = ["version"]
dependencies = [
  "pyshacl[js]>=0.30.0",
  "rdflib>=7.1.1",
  "pydantic>=2.9.2",
  "pydantic-settings[toml]>=2.6.1",
  "jinja2>=3.1.6",
]
requires-python = ">=3.10,<3.13"  # problems compiling pyduktape2 when using Python 3.13
authors = [
  {name = "David Pape", email = "d.pape@hzdr.de"},
]
description = "Program that validates a given metadata file using a set of configurable policies."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["software-publication", "policies", "shacl", "rdf", "metadata"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
sc-validate = "sc_validate.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/sc_validate/namespaces.py" = ["N815"]  # mixed case class parameters

[tool.setuptools_scm]
version_file = "src/sc_validate/_version.py"
