# SPDX-FileCopyrightText: 2024 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: David Pape

[build-system]
requires = ["setuptools >= 64", "setuptools-scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-validate"
dynamic = ["version"]
dependencies = [
  "pyshacl[js]>=0.30.0",
  "rdflib>=7.1.1",
  "toml>=0.10.2",
  "jinja2>=3.1.6",
]
requires-python = ">=3.10"
authors = [
  {name = "David Pape", email = "d.pape@hzdr.de"},
]
description = "Program that validates a given metadata file using a set of configurable policies."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["software-publication", "policies", "shacl", "rdf", "metadata"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
docs = [
  "sphinx>=8.0.0",
  "myst-parser>=4.0.0",
  "sphinx-book-theme>=1.1.4",
  "taskipy>=1.14.1"
]

[project.scripts]
software-card-validate = "sc_validate.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/sc_validate/namespaces.py" = ["N815"]  # mixed case class parameters

[tool.setuptools_scm]
version_file = "src/sc_validate/_version.py"

[tool.taskipy.tasks]
docs-build = "sphinx-build -M html docs docs/_build"
docs-clean = "sphinx-build -M clean docs docs/_build"
